# face_recognition

./: .env.example  .gitignore  CLAUDE.md  implementation_plan.md  main.py  pyproject.toml
app/: aligner_fivept.py  config.py  detector_scrfd.py  embedder_arcface.py  enrollment.py  logging_config.py  matcher_faiss.py  overlay.py  recognition.py  utils.py  video_io.py
app/backends/: __init__.py  factory.py
app/backends/dlib/: __init__.py  detector.py  embedder.py  matcher.py
app/backends/insightface/: __init__.py  aligner.py  detector.py  embedder.py  matcher.py
app/core/: __init__.py  config.py  interfaces.py  logging_config.py  overlay.py  utils.py  video_io.py
app/services/: __init__.py  enrollment.py  recognition.py
document/: diagrama_arquitectura.md  proyecto_final.tex
scripts/: README.md  build_index.py  capture_enroll.py  process_dataset.py  run_image.py  run_video.py  run_webcam.py  test_aligner.py  test_detector.py  test_embedder.py  test_matcher.py
scripts/dlib/: 01_encode_faces.py  02_run_image.py  02_run_video.py  02_run_webcam.py  README.md
scripts/insightface/: 01_capture_enroll.py  01_process_dataset.py  02_build_index.py  03_run_image.py  03_run_video.py  03_run_webcam.py  04_evaluate.py  README.md
scripts/tests/: test_aligner.py  test_detector.py  test_embedder.py  test_matcher.py
tests/: test_enrollment.py  test_matcher.py
